[tool.poetry]
name = "os-presence"
version = "0.1.0"
description = "A discord rich presence for os"
authors = ["MannuVilasara <mannuvilasara@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pypresence = "^4.3.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
